--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.spriteshape": "5.1.4",
+    "com.unity.ads": "3.7.5",
     "com.unity.cinemachine": "2.6.10",
     "com.unity.collab-proxy": "1.7.1",
     "com.unity.device-simulator": "3.0.1-preview",
